--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
-<<<<<<< HEAD
 dfdfsdffsf
 
 <!-- ydh  가 수정한 부분 -->
-fsdjldsfjsldf sdlfjsfljf fskjlsdfjdsf
-=======
-dfdfsdffsf 다현이 멋있다ㅋ 브랜치 만들었다ㅋㅋ
->>>>>>> e3f5ffdb4af7e620c961735c1721fec0dbc2ea43
+fsdjldsfjsldf sdlfjsfljf fskjlsdfjdsf dfdfsdffsf 다현이 멋있다ㅋ 브랜치
+만들었다ㅋㅋ
